--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.search-form {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  align-items: center;
+  min-height: 10vh;
+}
+.search-bar {
+  width: 30%;
+  border-radius: 8px;
+  border: 3px solid rgb(178, 252, 178);
+  padding: 5px;
+  margin-right: 10px;
+  font-size: medium;
+}
+.search-button {
+  background-color: mintcream;
+  font-size: medium;
+  border-radius: 8px;
+  border: none;
+  padding: 8px;
+}
+.maincontent {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heading {
+  letter-spacing: 8px;
+  color: black;
+  align-self: center;
 }
